--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ body {
 }
 
  h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     margin-bottom: 20px;
     font-weight: 700;
     /* text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); */
@@ -267,7 +267,7 @@ body {
     display: none;
     background-size: 300px;
     background-repeat: no-repeat;
-   background-position: right;
+   background-position: top;
 }
 
 
